cargo-features = ["codegen-backend"]
[package]
name = "passlint"
description = "A linter for your password store"
version = "0.1.0"
edition = "2021"

[features]
default = ["access-secret-key"]
# Enable code that accesses secrets
#
# If you are extra paranoid you can turn this off c:
access-secrets = []
# Retrieve secret key from agent and use it directly to decrypt the secrets
# 
# The secret key will only be kept in memory, but it might be leaked by a coredump
access-secret-key = [
  "sequoia-gpg-agent",
  "sequoia-openpgp",
  "tokio",
  "access-secrets",
]

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
dialoguer = "0.11.0"
ignore = "0.4.22"
indicatif = { version = "0.17.8" }
miette = { version = "7.2.0", features = ["fancy"] }
shlex = "1.3.0"
thiserror = "1.0.61"

# access-secret-key feature
sequoia-gpg-agent = { version = "0.4.2", optional = true }
sequoia-openpgp = { version = "1.20.0", optional = true, default-features = false, features = [
  "crypto-openssl",
] }
tokio = { version = "1.38.0", optional = true, features = [
  "fs",
  "macros",
  "process",
  "rt",
  "parking_lot",
  "time",
] }

[profile.dev]
debug = 0
codegen-backend = "cranelift"
